--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@monaco-editor/react": "^4.0.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -41,6 +42,7 @@
     "jest-watch-typeahead": "0.6.1",
     "localforage": "^1.9.0",
     "mini-css-extract-plugin": "0.11.3",
+    "monaco-editor": "^0.21.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
