--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jscodeshift": "^0.11.0",
     "localforage": "^1.9.0",
     "mini-css-extract-plugin": "0.11.3",
     "monaco-editor": "^0.21.3",
+    "monaco-jsx-highlighter": "0.0.15",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -153,6 +155,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jscodeshift": "^0.7.2",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.18.0",
