--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-resizable": "^1.7.2",
+    "@uiw/react-md-editor": "^2.1.2",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
